# SentinelFlow

./: .dockerignore  .gitignore  01_Codex固定任务模板.md  02_P0工程与架构基线.md  03_P1协议体系与Schema.md  04_P1_5_CLI骨架与工作区初始化.md  05_P2_1插件发现与ToolRegistry.md  06_P2_2CommandAdapter与受控Runtime.md  07_P2_3结果审计报告闭环.md  08_P2_4单步骤TaskSpec_MVP.md  09_P3多适配器与PythonSDK.md  10_P4_DAG编排与Policy强化.md  11_P5_APIService与WebConsole.md  12_Codex使用策略与验收闭环.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  SentinelFlow_Codex_逐步开发提示词规划_完整稿.md  SentinelFlow_实现任务拆解路径.md  compose.yaml  rustfmt.toml  网络安全验证工具管理框架开发任务书_V2.md
.codex/: WORKFLOW.md
.github/workflows/: ci.yml  performance.yml
crates/sentinelflow-adapter-command/: Cargo.toml
crates/sentinelflow-adapter-command/src/: lib.rs
crates/sentinelflow-adapter-command/tests/: runtime_contract.rs
crates/sentinelflow-adapter-docker/: Cargo.toml
crates/sentinelflow-adapter-docker/src/: lib.rs
crates/sentinelflow-adapter-docker/tests/: contract.rs
crates/sentinelflow-adapter-file-import/: Cargo.toml
crates/sentinelflow-adapter-file-import/src/: lib.rs
crates/sentinelflow-adapter-file-import/tests/: contract.rs
crates/sentinelflow-adapter-http/: Cargo.toml
crates/sentinelflow-adapter-http/src/: lib.rs
crates/sentinelflow-adapter-http/tests/: contract.rs
crates/sentinelflow-api/: Cargo.toml
crates/sentinelflow-api/src/: lib.rs  main.rs
crates/sentinelflow-api/web/: console.html  plugin-platform.js  plugin-platform.test.js  simple-check.js  simple-check.test.js
crates/sentinelflow-cli/: Cargo.toml
crates/sentinelflow-cli/src/: cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  workspace.rs
crates/sentinelflow-cli/tests/: cli_contract.rs
crates/sentinelflow-core/: Cargo.toml
crates/sentinelflow-core/src/: constants.rs  lib.rs
crates/sentinelflow-orchestrator/: Cargo.toml
crates/sentinelflow-orchestrator/src/: lib.rs
crates/sentinelflow-policy/: Cargo.toml
crates/sentinelflow-policy/src/: lib.rs
crates/sentinelflow-registry/: Cargo.toml
crates/sentinelflow-registry/src/: discovery.rs  error.rs  install.rs  lib.rs  registry.rs  validation.rs
crates/sentinelflow-registry/tests/: plugin_contract.rs
crates/sentinelflow-report/: Cargo.toml
crates/sentinelflow-report/src/: lib.rs
crates/sentinelflow-runtime/: Cargo.toml
crates/sentinelflow-runtime/src/: lib.rs
crates/sentinelflow-schema/: Cargo.toml
crates/sentinelflow-schema/examples/: generate_schemas.rs
crates/sentinelflow-schema/src/: lib.rs
crates/sentinelflow-schema/src/v1alpha1/: mod.rs  schema.rs  types.rs  validation.rs
crates/sentinelflow-schema/tests/: v1alpha1_contract.rs
crates/sentinelflow-store/: Cargo.toml
crates/sentinelflow-store/src/: lib.rs
docs/: adapters-and-python-sdk.md  api-service-and-web-console.md  asset-discovery-flow.md  cli.md  cloud-asset-import-plus.md  cmdb-sync-plus.md  command-adapter-runtime.md  dag-orchestration-and-policy.md  examples.md  nessus-import-plus.md  nuclei-adapter-plus.md  openvas-import-plus.md  plugin-registry.md  protocol-v1alpha1.md  release-v1.0-rc.md  results-audit-reporting.md  security-boundary.md  task-single-step-mvp.md  troubleshooting.md  v1.0-rc-acceptance-report.md  v1rc-trial-guide.md  zap-baseline-plus.md  网络安全验证工具管理框架开发任务书_V2.md
docs/adr/: 0001-architecture-baseline.md
docs/deployment/: config-development.yaml  config-local-demo.yaml  config-production-like.yaml  local-demo.md  production-like.md  upgrade-and-migration.md
docs/examples/: task.subdomain-dns-port-service.active-safe.yaml  task.subdomain-dns-port-service.fixture.yaml  task.subdomain-dns-port-service.high-risk.example.yaml  task.subdomain-dns-port-service.passive-intel.yaml  task.weikan-full-asset-discovery.authorized.yaml
docs/planning/: README.md  SentinelFlow插件能力矩阵与建设规划.md
docs/release/: p5_5_action_items.md  p5_5_consistency_report.md  p5_5_deployment_report.md  p5_5_docs_usability_report.md  p5_5_e2e_report.md  p5_5_final_acceptance_report.md  p5_5_performance_baseline.md  p5_5_performance_baseline_metrics.json  p5_5_productization_audit.md  p5_5_reliability_report.md  p5_5_security_hardening_report.md  p5_6_baseline_audit.md  p5_6_release_gates.md  p5_6_scope.md  v1_0_rc_known_issues.md  v1_0_rc_release_gate.md  v1_0_rc_release_notes.md
plugins/examples/: README.md
plugins/examples/example-dns-resolve/: README.md  sentinelflow.tool.yaml
plugins/examples/example-docker-adapter/: README.md  sentinelflow.tool.yaml
plugins/examples/example-echo/: README.md  sentinelflow.tool.yaml
plugins/examples/example-failure/: README.md  sentinelflow.tool.yaml
plugins/examples/example-file-import/: README.md  sentinelflow.tool.yaml
plugins/examples/example-finding-consumer/: README.md  sentinelflow.tool.yaml
plugins/examples/example-high-risk/: README.md  sentinelflow.tool.yaml
plugins/examples/example-http-adapter/: README.md  sentinelflow.tool.yaml
plugins/examples/example-invalid-parser/: README.md  sentinelflow.tool.yaml
plugins/examples/example-restricted-high-risk/: README.md  sentinelflow.tool.yaml
plugins/official/: README.md
schemas/v1alpha1/: README.md  audit-event.schema.json  capability.schema.json  evidence.schema.json  finding.schema.json  metadata.schema.json  policy.schema.json  standard-error.schema.json  task-spec.schema.json  tool-input.schema.json  tool-manifest.schema.json  tool-output.schema.json
scripts/: check_p5_6_boundary.js  p5_6_gates.sh  p5_6_scope_guard.js  p5_6_scope_guard.sh  verify_codex_delivery.sh
sdk/python/: pyproject.toml
sdk/python/sentinelflow_sdk/: __init__.py
sdk/python/tests/: test_sdk.py
tests/e2e/: README.md  p5_5_consistency.py  p5_5_consistency.sh  p5_5_smoke.sh
tests/e2e/p5_5_full_flow/: run.sh  (+1 more)
tests/fixtures/: README.md  input.example.json  subdomain-discovery-plus.task.yaml  task.cycle.yaml  task.dag.yaml  task.failure-policy.yaml  task.high-risk.yaml  task.single-step.yaml  task.slow.yaml  task.subdomain-discovery.yaml
tests/integration/: README.md
tests/performance/: performance_baseline.py  run.sh
(+323 files in other folders)
