[package]
name = "sentinelflow-adapter-command"
description = "Command adapter for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
jsonschema = { version = "0.18.3", default-features = false }
nix = { version = "0.30.1", features = ["process", "signal"] }
serde_json = "1.0.140"
sentinelflow-policy = { path = "../sentinelflow-policy" }
sentinelflow-runtime = { path = "../sentinelflow-runtime" }
sentinelflow-schema = { path = "../sentinelflow-schema" }
tempfile = "3.20.0"
time = "=0.3.36"
tokio = { version = "1.45.1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
sentinelflow-registry = { path = "../sentinelflow-registry" }

[lints]
workspace = true
