[package]
name = "sentinelflow-adapter-file-import"
description = "Controlled structured content import adapter for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
csv = "1.3.1"
serde_json = "1.0.140"
sentinelflow-runtime = { path = "../sentinelflow-runtime" }
sentinelflow-schema = { path = "../sentinelflow-schema" }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
