[package]
name = "sentinelflow-adapter-http"
description = "Controlled HTTP adapter for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
sentinelflow-runtime = { path = "../sentinelflow-runtime" }
sentinelflow-schema = { path = "../sentinelflow-schema" }
tokio = { version = "1.45.1", features = ["sync", "time"] }
url = "2.5.4"

[dev-dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
