[package]
name = "sentinelflow-orchestrator"
description = "Task orchestration abstractions for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
sentinelflow-schema = { path = "../sentinelflow-schema" }

[dev-dependencies]
serde_json = "1.0.140"

[lints]
workspace = true
