[package]
name = "sentinelflow-policy"
description = "Policy enforcement for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ipnet = "2.11.0"
serde = { version = "1.0.219", features = ["derive"] }
sentinelflow-schema = { path = "../sentinelflow-schema" }
url = "2.5.4"

[lints]
workspace = true
