[package]
name = "sentinelflow-runtime"
description = "Controlled execution runtime for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.88"
jsonschema = { version = "0.18.3", default-features = false }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sentinelflow-schema = { path = "../sentinelflow-schema" }
sentinelflow-policy = { path = "../sentinelflow-policy" }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["v4"] }

[lints]
workspace = true
