[package]
name = "sentinelflow-schema"
description = "Protocol schema types for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
sentinelflow-core = { path = "../sentinelflow-core" }

[dev-dependencies]
jsonschema = { version = "0.18.3", default-features = false }
time = "=0.3.36"

[lints]
workspace = true
