[package]
name = "sentinelflow-store"
description = "Persistence abstractions for SentinelFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sentinelflow-runtime = { path = "../sentinelflow-runtime" }
sentinelflow-schema = { path = "../sentinelflow-schema" }
sentinelflow-policy = { path = "../sentinelflow-policy" }
tempfile = "3.20.0"
time = { version = "=0.3.36", features = ["formatting"] }
