[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelflow-sdk"
version = "0.1.0"
description = "Dependency-free Python helpers for SentinelFlow out-of-process plugins"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinelflow_sdk*"]

